src/main/java/Grammar/metaComvert/metacomvertParser.java
// $ANTLR 3.5.1 C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g 2022-11-11 17:29:24

package Grammar.metaComvert;

	// Inserire le import per costruttore (vedere @members )
	//SE SI VUOLE UTILIZZARE IL FILE ParserLauncher
	
import Grammar.metaComvert.util.*;
import Grammar.metaComvert.MetaComvertHandler;
import java.io.IOException;
import java.io.StringReader;
import java.io.FileReader;
import java.util.HashMap;
import java.util.Map;
import LFCLibrary.TypeConversion.*;





import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class metacomvertParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BACLOSE", "BAOPEN", "COL", "COLON", 
		"COMMA", "COMMENT", "ENDCOL", "ENDCONVERSION", "ENDDELETE", "ENDDOC", 
		"ENDINPATH", "ENDMODIFYINGCELL", "ENDNAMESHEET", "ENDOUTPATH", "ENDROW", 
		"INDEXDELETE", "INT", "NEWNAMESHEET", "NEWVALUE", "ROW", "SCAN_ERROR", 
		"SHEETINDEX", "STARTCOL", "STARTCONVERSION", "STARTDELETE", "STARTDOC", 
		"STARTINPATH", "STARTMODIFYINGCELL", "STARTNAMESHEET", "STARTOUTPATH", 
		"STARTROW", "STRINGA", "WS"
	};
	public static final int EOF=-1;
	public static final int BACLOSE=4;
	public static final int BAOPEN=5;
	public static final int COL=6;
	public static final int COLON=7;
	public static final int COMMA=8;
	public static final int COMMENT=9;
	public static final int ENDCOL=10;
	public static final int ENDCONVERSION=11;
	public static final int ENDDELETE=12;
	public static final int ENDDOC=13;
	public static final int ENDINPATH=14;
	public static final int ENDMODIFYINGCELL=15;
	public static final int ENDNAMESHEET=16;
	public static final int ENDOUTPATH=17;
	public static final int ENDROW=18;
	public static final int INDEXDELETE=19;
	public static final int INT=20;
	public static final int NEWNAMESHEET=21;
	public static final int NEWVALUE=22;
	public static final int ROW=23;
	public static final int SCAN_ERROR=24;
	public static final int SHEETINDEX=25;
	public static final int STARTCOL=26;
	public static final int STARTCONVERSION=27;
	public static final int STARTDELETE=28;
	public static final int STARTDOC=29;
	public static final int STARTINPATH=30;
	public static final int STARTMODIFYINGCELL=31;
	public static final int STARTNAMESHEET=32;
	public static final int STARTOUTPATH=33;
	public static final int STARTROW=34;
	public static final int STRINGA=35;
	public static final int WS=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public metacomvertParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public metacomvertParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return metacomvertParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g"; }



	// ************************************ inizio Analizzatore semantico

	MetaComvertHandler h;


	// ****************************************** Parte scanner e parser 
		public metacomvertParser(FileReader fileIn, converterExcelToType cET) throws  IOException{
					this(new CommonTokenStream(
									new metacomvertLexer(
											new ANTLRReaderStream(fileIn))));
			
					h = new MetaComvertHandler(input, cET);
				}
				
	public MetaComvertHandler getHandler() {
	    return h;
	  }
	  
				
				
	public List<String> getErrorList () {
	    return h.getErrorList();
	  }
		public void displayRecognitionError(String[] tokenNames,
	                                       RecognitionException e) {
			String hdr = " * " + getErrorHeader(e);
			String msg = " - " + getErrorMessage(e, tokenNames);
			  
			h.handleError(tokenNames, e, hdr, msg);
	  }





	//**





	// $ANTLR start "language"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:79:1: language : STARTDOC wsc body wsc ENDDOC ;
	public final void language() throws RecognitionException {
		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:80:2: ( STARTDOC wsc body wsc ENDDOC )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:81:3: STARTDOC wsc body wsc ENDDOC
			{
			match(input,STARTDOC,FOLLOW_STARTDOC_in_language62); 
			pushFollow(FOLLOW_wsc_in_language64);
			wsc();
			state._fsp--;

			pushFollow(FOLLOW_body_in_language66);
			body();
			state._fsp--;

			pushFollow(FOLLOW_wsc_in_language68);
			wsc();
			state._fsp--;

			match(input,ENDDOC,FOLLOW_ENDDOC_in_language71); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "language"



	// $ANTLR start "body"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:85:2: body : (inPath= inpath ) wsc (outPath= outpath )? wsc (convTok= conversion ) wsc (nameSheet= namesheet )? wsc ( delete )? wsc (modCell= modifyingcell )? ;
	public final void body() throws RecognitionException {
		Token inPath =null;
		ArrayList<Token> outPath =null;
		ArrayList<Token> convTok =null;
		Map<Token, Token> nameSheet =null;
		ArrayList<cellModifyingClass<Token,Token,Token,Token>> modCell =null;

		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:85:7: ( (inPath= inpath ) wsc (outPath= outpath )? wsc (convTok= conversion ) wsc (nameSheet= namesheet )? wsc ( delete )? wsc (modCell= modifyingcell )? )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:88:3: (inPath= inpath ) wsc (outPath= outpath )? wsc (convTok= conversion ) wsc (nameSheet= namesheet )? wsc ( delete )? wsc (modCell= modifyingcell )?
			{
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:88:3: (inPath= inpath )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:88:4: inPath= inpath
			{
			pushFollow(FOLLOW_inpath_in_body98);
			inPath=inpath();
			state._fsp--;

			h.setInputPath(inPath);
			}

			pushFollow(FOLLOW_wsc_in_body110);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:94:3: (outPath= outpath )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==STARTOUTPATH) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:94:4: outPath= outpath
					{
					pushFollow(FOLLOW_outpath_in_body125);
					outPath=outpath();
					state._fsp--;

					h.setOuputPath(outPath);
					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body141);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:101:3: (convTok= conversion )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:101:4: convTok= conversion
			{
			pushFollow(FOLLOW_conversion_in_body156);
			convTok=conversion();
			state._fsp--;

			 h.setConversionType(convTok);
			}

			pushFollow(FOLLOW_wsc_in_body170);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:107:3: (nameSheet= namesheet )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==STARTNAMESHEET) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:107:4: nameSheet= namesheet
					{
					pushFollow(FOLLOW_namesheet_in_body185);
					nameSheet=namesheet();
					state._fsp--;

					 h.setSheetName(nameSheet);
					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body198);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:112:3: ( delete )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==STARTDELETE) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:112:4: delete
					{
					pushFollow(FOLLOW_delete_in_body206);
					delete();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body218);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:119:3: (modCell= modifyingcell )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==STARTMODIFYINGCELL) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:119:4: modCell= modifyingcell
					{
					pushFollow(FOLLOW_modifyingcell_in_body236);
					modCell=modifyingcell();
					state._fsp--;

					h.modifyingCellMeth(modCell);
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "body"



	// $ANTLR start "wsc"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:123:1: wsc : ( WS | COMMENT | scanerror )* ;
	public final void wsc() throws RecognitionException {
		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:123:5: ( ( WS | COMMENT | scanerror )* )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:124:2: ( WS | COMMENT | scanerror )*
			{
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:124:2: ( WS | COMMENT | scanerror )*
			loop5:
			while (true) {
				int alt5=4;
				switch ( input.LA(1) ) {
				case WS:
					{
					alt5=1;
					}
					break;
				case COMMENT:
					{
					alt5=2;
					}
					break;
				case SCAN_ERROR:
					{
					alt5=3;
					}
					break;
				}
				switch (alt5) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:124:3: WS
					{
					match(input,WS,FOLLOW_WS_in_wsc255); 
					}
					break;
				case 2 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:124:8: COMMENT
					{
					match(input,COMMENT,FOLLOW_COMMENT_in_wsc259); 
					}
					break;
				case 3 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:124:17: scanerror
					{
					pushFollow(FOLLOW_scanerror_in_wsc262);
					scanerror();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "wsc"



	// $ANTLR start "inpath"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:128:1: inpath returns [Token t] : STARTINPATH (startInPath= path ) ENDINPATH wsc ;
	public final Token inpath() throws RecognitionException {
		Token t = null;


		Token startInPath =null;

		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:129:2: ( STARTINPATH (startInPath= path ) ENDINPATH wsc )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:130:3: STARTINPATH (startInPath= path ) ENDINPATH wsc
			{
			match(input,STARTINPATH,FOLLOW_STARTINPATH_in_inpath283); 
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:130:15: (startInPath= path )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:130:16: startInPath= path
			{
			pushFollow(FOLLOW_path_in_inpath290);
			startInPath=path();
			state._fsp--;

			 t = startInPath;
			}

			match(input,ENDINPATH,FOLLOW_ENDINPATH_in_inpath295); 
			pushFollow(FOLLOW_wsc_in_inpath299);
			wsc();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "inpath"



	// $ANTLR start "path"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:135:1: path returns [Token t] : wsc BAOPEN (baOpen= STRINGA ) BACLOSE wsc ;
	public final Token path() throws RecognitionException {
		Token t = null;


		Token baOpen=null;

		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:136:2: ( wsc BAOPEN (baOpen= STRINGA ) BACLOSE wsc )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:137:2: wsc BAOPEN (baOpen= STRINGA ) BACLOSE wsc
			{
			pushFollow(FOLLOW_wsc_in_path322);
			wsc();
			state._fsp--;

			match(input,BAOPEN,FOLLOW_BAOPEN_in_path324); 
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:137:13: (baOpen= STRINGA )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:137:14: baOpen= STRINGA
			{
			baOpen=(Token)match(input,STRINGA,FOLLOW_STRINGA_in_path331); 
			t = baOpen;
			}

			match(input,BACLOSE,FOLLOW_BACLOSE_in_path337); 
			pushFollow(FOLLOW_wsc_in_path340);
			wsc();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "path"



	// $ANTLR start "outpath"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:142:1: outpath returns [ArrayList<Token> outPath] : STARTOUTPATH (startOutPath= path )+ ENDOUTPATH ;
	public final ArrayList<Token> outpath() throws RecognitionException {
		ArrayList<Token> outPath = null;


		Token startOutPath =null;

		outPath = new ArrayList<Token>();
		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:145:2: ( STARTOUTPATH (startOutPath= path )+ ENDOUTPATH )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:147:2: STARTOUTPATH (startOutPath= path )+ ENDOUTPATH
			{
			match(input,STARTOUTPATH,FOLLOW_STARTOUTPATH_in_outpath370); 
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:147:15: (startOutPath= path )+
			int cnt6=0;
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==BAOPEN||LA6_0==COMMENT||LA6_0==SCAN_ERROR||LA6_0==WS) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:147:16: startOutPath= path
					{
					pushFollow(FOLLOW_path_in_outpath376);
					startOutPath=path();
					state._fsp--;

					 outPath.add(startOutPath);
					}
					break;

				default :
					if ( cnt6 >= 1 ) break loop6;
					EarlyExitException eee = new EarlyExitException(6, input);
					throw eee;
				}
				cnt6++;
			}

			match(input,ENDOUTPATH,FOLLOW_ENDOUTPATH_in_outpath382); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return outPath;
	}
	// $ANTLR end "outpath"



	// $ANTLR start "conversion"
	// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:152:1: conversion returns [ArrayList<Token> convTok] : STARTCONVERSION wsc (convType= type ) wsc ENDCONVERSION ;
	public final ArrayList<Token> conversion() throws RecognitionException {
		ArrayList<Token> convTok = null;


		ArrayList<Token> convType =null;

		try {
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:153:2: ( STARTCONVERSION wsc (convType= type ) wsc ENDCONVERSION )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:155:2: STARTCONVERSION wsc (convType= type ) wsc ENDCONVERSION
			{
			match(input,STARTCONVERSION,FOLLOW_STARTCONVERSION_in_conversion408); 
			pushFollow(FOLLOW_wsc_in_conversion410);
			wsc();
			state._fsp--;

			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:155:22: (convType= type )
			// C:\\Users\\aless\\Desktop\\PROGETTO_LINGUAGGI_FORMALI_COMPILATORI\\Progetto_new\\src\\main\\java\\Grammar\\metaComvert\\metacomvert.g:155:24: convType= type
			{
			pushFollow(FOLLOW_type_in_conversion418);
			convType=type();
			state._fsp--;

			 convTok = convType;
			}

			pushFollow(FOLLOW_wsc_in_conversion422);
			wsc();
			state._fsp--;

			match(input,ENDCONVERSION,FOLLOW_ENDCONVERSION_in_conversion424); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return convTok;
	}
	// $ANTLR end "conversion"


